# noahgift

./: .gitignore  Makefile  README.md
docs/roadmaps/: roadmap.yaml
docs/specifications/: 000-premise-and-principles.md  001-prove-claim.md  002-diff-fixtures.md  003-semantic-grep.md  004-score-paste.md  005-transcribe-clip.md  006-recommend-path.md  007-replay-verify.md  008-audit-site.md  009-ask-transcripts.md  010-pipe-composition.md  011-runtime-bundle.md  012-site-audit-contract.md  README.md
docs/specifications/sub/: audit-snapshot.md  bundle-crate.md  cli-wos-subcommand.md  registry-builder.md  site-contracts.md
tests/course-audit/: .gitignore  Cargo.toml
tests/course-audit/src/: main.rs
tests/fixtures/: expected-courses.md  expected-noahgift-site.md
