[package]
name = "course-audit"
version = "0.1.0"
edition = "2021"
publish = false
description = "Probar-based content-shape audit for the README's Coursera URLs."

[[bin]]
name = "audit-courses"
path = "src/main.rs"

[dependencies]
jugar-probar = { version = "1.0", features = ["browser"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
